--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.catdogdetection">
+    package="com.example.object_detection_app">
    <application
-        android:label="catdogdetection"
+        android:label="object_detection_app"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
