--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  bloc: ^8.1.0
+  bloc_flutter: ^0.1.0
+  image_picker: ^0.8.6
 
 dev_dependencies:
   flutter_test:
