--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   bloc: ^8.1.0
-  image_picker: ^0.8.6
+  image_picker: ^0.8.5+3
   flutter_bloc: ^8.1.1
 
 dev_dependencies:
